docs: Fix mobile logo collapsed (#20556)
* docs: Fix mobile logo collapsed

* fix lint

--- a/site/theme/static/header.less
+++ b/site/theme/static/header.less
@@ -41,6 +41,7 @@
     box-shadow: none;
 
     #logo {
+      padding-right: 16px;
       padding-left: 0;
     }
 
